updated js for the dropdown menu

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 .sidebar{
 	position: fixed;
-	width: 400px;
+	width: 250px;
 	height: 100%;
 	left: 0;
 	background:#1b1b1b;
@@ -35,7 +35,48 @@ nav ul li{
 	list-style: none;
 }
 nav ul li a{
+	position: relative;
 	color: #fff;
 	text-decoration: none;
 	font-size: 18px;
+	padding-left: 40px;
+	font-weight: 500;
+	display: block;
+	width: 100%;
+	border-left: 3px solid transparent;
+}
+nav ul li a:hover{
+	color: cyan;
+	background:#1e1e1e;
+	border-left-color: cyan;
+}
+nav ul ul{
+	position: static;
+	display: none;
+}
+nav ul .feat-show.show{
+	display: block;
+}
+nav ul .serv-show.show1{
+	display: block;
+}
+nav ul ul li{
+	line-height: 42px;
+	border-bottom: none;
+}
+nav ul ul li a{
+	font-size: 17px;
+	color: #e6e6e6;
+	padding-left: 80px;
+}
+nav ul li a span{
+	position: absolute;
+	top: 50%;
+	right:20px;
+	transform: translateY(-50%);
+	font-size: 22px;
+	transition: transform 0.4s;
+}
+nav ul li a:hover span{
+	transform: translateY(-50%) rotate(-180deg);
 }
