--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 	position: fixed;
 	width: 250px;
 	height: 100%;
-	left: 0;
+	left: -250px;
 	background:#1b1b1b;
 }
 .sidebar .text{
@@ -34,6 +34,9 @@ nav ul li{
 	border-bottom: 1px solid rgb(255,255,255,0.1);
 	list-style: none;
 }
+nav ul li:last-child{
+	border-bottom: 1px solid rgb(255,255,255,0.5);
+}
 nav ul li a{
 	position: relative;
 	color: #fff;
@@ -45,7 +48,7 @@ nav ul li a{
 	width: 100%;
 	border-left: 3px solid transparent;
 }
-nav ul li a:hover{
+nav ul li.active a{
 	color: cyan;
 	background:#1e1e1e;
 	border-left-color: cyan;
@@ -69,6 +72,15 @@ nav ul ul li a{
 	color: #e6e6e6;
 	padding-left: 80px;
 }
+nav ul li.active ul li a{
+	color:#e6e6e6;
+	background:#1b1b1b;
+	border-left-color: transparent;
+}
+nav ul li ul li a:hover{
+	color: cyan!important;
+	background:#1e1e1e!important;
+}
 nav ul li a span{
 	position: absolute;
 	top: 50%;
@@ -78,5 +90,8 @@ nav ul li a span{
 	transition: transform 0.4s;
 }
 nav ul li a:hover span{
+	transform: translateY(-50%) rotate(-180deg);
+}
+nav ul li a span.rotate{
 	transform: translateY(-50%) rotate(-180deg);
 }
